--- a/public/css/flyer.css
+++ b/public/css/flyer.css
@@ -603,7 +603,7 @@ Map portlet
 .bool-widget-btn-carousel{
     position: absolute;
     top: 0;
-    bottom: 260px;
+    bottom: 290px;
     left:0;
     right:0;
 }
